[package]
name = "s_lf"
version = "0.0.1-dev"
authors = ["ember alrynx <ember@lunar.town>"]
edition = "2018"
description = "an exocortex for one"
license = "Apache-2.0 OR MIT"
keywords = ["moxie", "app", "notes", "cli", "web"]
homepage = "https://ember.software/s_lf"
repository = "https://github.com/emberian/s_lf"
categories = ["command-line-utilities"]

[dependencies]
eyre = "*"
url = {version = "*", features = ["serde"] }
vobject = "*"
serde_derive = "*"
webpage = "*"
serde = "*"
argh = "*"
mime = "*"
chrono ={version = "*", features = ["serde"] }
erased-serde = "*"
uuid = { version = "*", features = ["serde"] }
serde_bytes = "*"
serde_json = "*"
reqwest = { version = "*", features = ["json"] }
tokio = {version  ="*", features = [ "full" ] }
tui = {version = "*", default-features = false, features = ["crossterm"] }
crossterm = "*"
linefeed = "*"
json-patch = "*"

[dependencies.serde_with]
version = "1.5.0-alpha.1"